# wpdebugger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  test_customtkinter.py  wpdebugger.py  wpdebugger_modern.py  wpdebugger_simple.py
src/: config.py  gui_modern.py  gui_simple.py  main_modern.py  main_simple.py
